[project]
name = "fishclaw-mcp"
version = "0.1.0"
description = "FishClaw 闲鱼自动化 MCP 服务器"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "openai>=2.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
include = ["server.py", "tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
